--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,7 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+Offline 1 (Creational Design Pattern)/1905045/Problem 1/
+
+Offline 1 (Creational Design Pattern)/1905045/Problem 2/
