--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,7 @@ hs_err_pid*
 Offline 1 (Creational Design Pattern)/1905045/Problem 1/
 
 Offline 1 (Creational Design Pattern)/1905045/Problem 2/
+
+*.iml
+
+*.xml
