Ready for submission

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,9 @@ Offline 1 (Creational Design Pattern)/1905045/Problem 2/
 *.iml
 
 *.xml
+
+Offline 2 (Behavioural Design Pattern)/1905045/Problem 1/
+
+Offline 2 (Behavioural Design Pattern)/1905045/Problem 2/
+
+Offline 2 (Behavioural Design Pattern)/1905045/Problem 3/
